// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameCarousel component renders the GameCarousel given GamePage props 1`] = `
<Fragment>
  <div
    className="slideshow-container"
  >
    <div
      className="showSlide fade"
      key="0"
    >
      <div
        className="numbertext"
      >
        1
         / 
        1
      </div>
      <img
        alt="undefined thumbnail"
        src="https://steamcdn-a.akamaihd.net/steam/apps/367520/capsule_616x353.jpg?t=1577747500"
      />
    </div>
  </div>
  <br />
  <div
    className="style-align"
  >
    <span
      className="dot"
      key="0"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`GameCarousel component renders the GameCarousel given GamesHomePage props 1`] = `
<Fragment>
  <div
    className="slideshow-container"
  >
    <div
      className="showSlide fade"
      key="0"
    >
      <div
        className="numbertext"
      >
        1
         / 
        2
      </div>
      <Link
        to="/games/2"
      >
         
        <img
          alt="testGame thumbnail"
          src="https://steamcdn-a.akamaihd.net/steam/apps/367520/capsule_616x353.jpg?t=1577747500"
        />
      </Link>
    </div>
    <div
      className="mySlides fade"
      key="1"
    >
      <div
        className="numbertext"
      >
        2
         / 
        2
      </div>
      <Link
        to="/games/3"
      >
         
        <img
          alt="testGame thumbnail"
          src="https://steamcdn-a.akamaihd.net/steam/apps/367520/capsule_616x353.jpg?t=1577747500"
        />
      </Link>
    </div>
    <a
      className="next"
      href="#0"
      onClick={[Function]}
    >
      ❯
    </a>
  </div>
  <br />
  <div
    className="style-align"
  >
    <span
      className="dot"
      key="0"
      onClick={[Function]}
    />
    <span
      className="dot"
      key="1"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;
